templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: knot-gateway
  namespace: gitops
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - knot.westeurope.cloudapp.azure.com
    tls:
      mode: SIMPLE
      credentialName: knot-cert
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - knot.westeurope.cloudapp.azure.com
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
